<resources>
	<string name="app_name" translatable="false">MySpace</string>
	<string name="app_name_space" translatable="false">My Space</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="settings">Settings</string>
	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="welcome1_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
	<string name="welcome2_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable.</string>
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>
	<string name="signature_title">Your signature</string>
	<string name="set_language_title">Language</string>
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="default_long_text">Put all speaking her delicate recurred possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. So continued he or commanded household smallness delivered. Door poor on do walk in half. Roof his head the what.</string>
	<string name="please_wait">Please Wait</string>
	<string name="cancel">Cancel</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="submit">Submit</string>
	<string name="forget_password">Forget Password</string>
	<string name="app_icon">App Icon</string>
	<string name="updating">Updating</string>
	<string name="email">Email</string>
	<string name="checking_username">Checking Username</string>
	<string name="checking_email">Checking Email</string>
	<string name="sending_validation_email">Sending Validation Email</string>
	<string name="username_checked">Username Checked</string>
	<string name="email_checked">Email Checked</string>
	<string name="email_sent">Email Sent Successfully</string>
	<string name="username_duplicate">Username Existed</string>
	<string name="email_duplicate">Email Existed</string>
	<string name="email_sent_fail">Email Sending Failed</string>
	<string name="email_already_sent">Email Already Sent Before</string>
	<string name="error">Error</string>
	<string name="timeout_error">Timeout Error</string>
	<string name="image">Image</string>
	<string name="save">Save</string>
	<string name="post_text1">What\'s happening?</string>
	<string name="post_text2">What\'s in your mind?</string>
	<string name="post_text3">Got a story to tell?</string>
	<string name="post_text4">Life is great, isn\'t it?</string>
	<string name="post_text5">Tell the world!</string>
	<string name="back">Back</string>
	<string name="already_following">Following</string>
	<string name="follow">Follow</string>
	<string name="Loading">Loading</string>
	<string name="report">Report</string>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="just_now">Just now</string>
	<string name="min1">1 min ago</string>
	<string name="min5">5 min ago</string>
	<string name="min10">10 min ago</string>
	<string name="half_an_hour">Half an hour ago</string>
	<string name="an_hour">An hour ago</string>
	<string name="repost_from">\"Repost From \"</string>
	<string name="successfully_added_to_collection">Successfully Added to Collection</string>
	<string name="publisher">Publisher</string>
	<string name="date">Date</string>
	<string name="profile">Profile</string>
	<string name="posts">Posts</string>
	<string name="followers">Followers</string>
	<string name="undefined">Undefined</string>
	<string name="share">Share</string>
	<string name="add_to_collection">Add to Collection</string>
	<string name="delete">Delete</string>
	<string name="delete_repost">Delete Repost</string>
	<string name="all_posts">All Posts</string>
	<string name="hot">Hot</string>
	<string name="random">Random</string>
	<string name="following">Following</string>
	<string name="something_went_wrong">Something went wrong</string>
	<string name="dismiss">Dismiss</string>
	<string name="refresh_successful">Refresh Successful</string>
	<string name="download">Download</string>
	<string name="you_have_not_signed_in">You have not signed in</string>
	<string name="sign_in">Sign in</string>
	<string name="home">Home</string>
	<string name="message">Message</string>
	<string name="user">User</string>
	<string name="collection">Collections</string>
	<string name="drafts">Drafts</string>
	<string name="more">More</string>
	<string name="about">About</string>
	<string name="login">Login</string>
	<string name="sign_up">Sign Up</string>
	<string name="attached_images">Attached Images</string>
	<string name="miscellaneous">Miscellaneous</string>
	<string name="tags">Tags</string>
	<string name="visibility">Visibility</string>
	<string name="reply_limit">Reply Limit</string>
	<string name="leave_a_nice_comment">Leave a nice comment</string>
	<string name="add_new_comment">Add New Comment</string>
	<string name="repost">Repost</string>
	<string name="any_thought">Any thought?</string>
	<string name="add_new_tag">Add New Tag</string>
	<string name="your_tag">Your Tag</string>
	<string name="success">Success</string>
	<string name="made_by_rainbowwolfer">Made by RainbowWolfer</string>
	<string name="check_for_update">Check For Update</string>
	<string name="rate_us_in_appstore">Rate us in appstore</string>
	<string name="version">Version %1$s</string>
	<string name="nothing_here">Nothing Here</string>
	<string name="search">Search</string>
	<string name="be_the_first">Be the first</string>
	<string name="tell_the_rest">Tell the rest</string>
	<string name="reposts">Reposts</string>
	<string name="comments">Comments</string>
	<string name="scores">Scores</string>
	<string name="uploading_comment">Uploading Comment</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="personal_message">Message</string>
	<string name="edit_avatar">Edit Avatar</string>
	<string name="edit_username">Edit Username</string>
	<string name="profile_description">Profile Description</string>
	<string name="next">Next</string>
	<string name="finish">Finish</string>
	<string name="previous">Previous</string>
	<string name="sorts_posts_by">Sorts posts by</string>
	<string name="change_your_username">Change your username</string>
	<string name="new_username">New Username</string>
	<string name="confirm">Confirm</string>
	<string name="something_is_happening">Something is happening…</string>
	<string name="welcome">Welcome</string>
	<string name="sign_out">Sign Out</string>
	<string name="no_collections">No Collections</string>
	<string name="post">POST</string>
	<string name="loading">Loading</string>
	<string name="no_followers">No Followers</string>
	<string name="end_row_text_1">You have reached the end</string>
	<string name="end_row_text_2">Look up!</string>
	<string name="end_row_text_3">This is over but life isn\'t</string>
	<string name="end_row_text_4">But not here</string>
	<string name="end_row_text_5">Do a stretch-up will you?</string>
	<string name="post_visibilities_all">All can see</string>
	<string name="post_visibilities_follower">Followers can see</string>
	<string name="post_visibilities_none">No one can see</string>
	<string name="reply_visibilities_all">All can reply</string>
	<string name="reply_visibilities_follower">Followers can reply</string>
	<string name="reply_visibilities_none">No one can reply</string>
	<string name="refresh">Refresh</string>
	<string name="edit">Edit</string>
	<string name="top">Top</string>
	<string name="save_as_draft">Save as Draft</string>
	<string name="send_post">Post</string>
	<string name="send">Send</string>
	<string name="sending_post">Posting…</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="send_post_confirm_text">Are you sure to send this post?</string>
	<string name="save_draft_confirm_text">Are you sure to save current post as a draft?</string>
	<string name="least_5_characters_are_needed">Least 5 characters are needed</string>
	<string name="no_special_character_allowed">No Special Character Allowed</string>
	<string name="tag_cannot_be_empty">Tag cannot be empty</string>
	<string name="max_length_is_20">Max length is 20</string>
	<string name="already_exists">Already exists</string>
	<string name="are_you_sure_to_remove_this_image">Are you sure to remove this image?</string>
	<string name="new_post">New Post</string>
	<string name="saved_draft">Saved Draft</string>
	<string name="update_username_failed">Update Username Failed</string>
	<string name="no_comments_yet">No Comments Yet</string>
	<string name="no_more">No More</string>
	<string name="not_found">Not Found</string>
	<string name="loading_comments">Loading Comments</string>
	<string name="are_you_sure_to_sign_out">Are you sure to sign out?</string>
	<string name="are_you_sure_to_delete_this_draft">Are you sure to delete this draft?</string>
	<string name="your_registration_has_not_been_validated_through_email">Your registration has not been validated through email</string>
	<string name="email_or_password_is_wrong">Email or Password is wrong</string>
	<string name="something_went_wrong_please_try_again_later">Something went wrong. Please try again later</string>
	<string name="empty_username">Empty Username</string>
	<string name="empty_password">Empty Password</string>
	<string name="empty_email">Empty Email</string>
	<string name="username_cannot_be_empty">Username cannot be empty</string>
	<string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
	<string name="password_cannot_be_empty">Password cannot be empty</string>
	<string name="password_must_be_at_least_7_length">Password must be at least 7 length</string>
	<string name="no_password_entered_yet">No password entered yet</string>
	<string name="confirm_password_is_not_matched">Confirm password is not matched</string>
	<string name="you_have_empty_fields_to_fill">You have empty field(s) to fill</string>
	<string name="you_have_error_fields_to_fix">You have error field(s) to fix</string>
	<string name="delete_success">Delete Successful</string>
	<string name="are_you_sure_to_delete_post">Are you sure to delete this post?</string>
	<string name="select">Select</string>
	<string name="no_messages">No Messages</string>
	<string name="chat">Chat</string>
	<string name="info">Info</string>
	<string name="picture_saved">Picture Saved</string>
	<string name="picture_save_error">Error Saving Picture</string>
	<string name="successfully_removed_from_collections">Successfully Removed From Collections</string>
	<string name="you_need_to_update_the_app">You need to update the app</string>
	<string name="already_the_newest_version">Already the newest version</string>
	<string name="you_are_ahead_of_the_newest_version">You are ahead of the newest version</string>
	<string name="confirm_email">Confirm Email</string>
	<string name="find_password">Find Password</string>
	<string name="send_reset_email">Send Reset Email</string>
	<string name="confirm_email_is_not_matched">Confirm email is not matched</string>
	<string name="empty_confirm_email">Empty Confirm Email</string>
	<string name="successfully_send_reset_password_email">Successfully send reset password email</string>
	<string name="error_sending_email">Error sending email</string>
</resources>