<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<PreferenceCategory app:title="@string/messages_header">
		
		<EditTextPreference
			app:key="signature"
			app:title="@string/signature_title"
			app:useSimpleSummaryProvider="true"/>
		
		<ListPreference
			android:dialogIcon="@drawable/ic_baseline_language_24"
			android:icon="@drawable/ic_baseline_language_24"
			app:defaultValue="en"
			app:entries="@array/languages_entries"
			app:entryValues="@array/languages_values"
			app:key="language"
			app:title="@string/set_language_title"
			app:useSimpleSummaryProvider="true"/>
	
	</PreferenceCategory>
	
	<PreferenceCategory app:title="@string/sync_header">
		
		<SwitchPreferenceCompat
			app:key="sync"
			app:title="@string/sync_title"/>
		
		<SwitchPreferenceCompat
			app:dependency="sync"
			app:key="attachment"
			app:summaryOff="@string/attachment_summary_off"
			app:summaryOn="@string/attachment_summary_on"
			app:title="@string/attachment_title"/>
	
	</PreferenceCategory>

</PreferenceScreen>