<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@drawable/round_background"
	android:padding="20dp">
	
	<ProgressBar
		android:id="@+id/loadingDialog_progressRing"
		style="?android:attr/progressBarStyle"
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="24dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	
	<TextView
		android:id="@+id/loadingDialog_text_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/please_wait"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/loadingDialog_progressRing"/>
	
	<TextView
		android:id="@+id/loadingDialog_text_content"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/something_is_happening"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/loadingDialog_text_title"/>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/loadingDialog_button_cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/cancel"
		app:icon="@drawable/ic_baseline_cancel_24"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/loadingDialog_text_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>