<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.fragments.main.about.AboutFragment">
	
	<ImageView
		android:id="@+id/imageView"
		android:layout_width="0dp"
		android:layout_height="160dp"
		android:contentDescription=""
		android:src="@drawable/icon_my_space"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.1"/>
	
	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/app_name_space"
		android:textColor="?android:textColorPrimary"
		android:textSize="46sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView"/>
	
	<TextView
		android:id="@+id/about_text_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		tools:text="Version 1.0.0.0"/>
	
	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:clickable="true"
		android:focusable="true"
		android:foreground="@drawable/ripple_small_corners"
		android:paddingStart="10dp"
		android:paddingTop="5dp"
		android:paddingEnd="10dp"
		android:paddingBottom="5dp"
		android:text="@string/made_by_rainbowwolfer"
		app:layout_constraintBottom_toTopOf="@+id/about_text_version"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/about_button_update"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="24dp"
		android:text="@string/check_for_update"
		app:icon="@drawable/ic_baseline_system_update_alt_24"
		app:layout_constraintBottom_toTopOf="@+id/textView3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/about_button_rate"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/rate_us_in_appstore"
		app:icon="@drawable/ic_baseline_rate_review_24"
		app:layout_constraintBottom_toTopOf="@+id/about_button_update"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.503"
		app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>