<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/bottomSheetPasswordDialog_root"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/layout_background_bottom_input_dialog">
	
	<View
		android:id="@+id/view6"
		android:layout_width="100dp"
		android:layout_height="3dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/round_rectangle_background"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	
	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:text="@string/find_password"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view6"/>
	
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/forgetPasswordDialog_input_email"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		app:errorEnabled="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2">
		
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/forgetPasswordDialog_edit_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"/>
	</com.google.android.material.textfield.TextInputLayout>
	
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/forgetPasswordDialog_input_confirmEmail"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		app:errorEnabled="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/forgetPasswordDialog_input_email">
		
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/forgetPasswordDialog_edit_confirmEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/confirm_email"/>
	</com.google.android.material.textfield.TextInputLayout>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/forgetPasswordDialog_button_submit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="16dp"
		android:text="@string/send_reset_email"
		app:icon="@drawable/ic_baseline_arrow_forward_24"
		app:iconPadding="15dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/forgetPasswordDialog_input_confirmEmail"/>
</androidx.constraintlayout.widget.ConstraintLayout>