<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.fragments.splash.Welcome2Fragment">
	
	<ImageView
		android:id="@+id/welcome2_image"
		android:layout_width="0dp"
		android:layout_height="180dp"
		android:layout_marginStart="100dp"
		android:layout_marginTop="100dp"
		android:layout_marginEnd="100dp"
		android:contentDescription="@string/welcome2_text"
		android:src="@drawable/ic_delivery"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	
	<TextView
		android:id="@+id/welcom2text"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="48dp"
		android:layout_marginEnd="16dp"
		
		android:text="@string/welcome2_text"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/welcome2_image"/>
	
	<TextView
		android:id="@+id/welcome2_button_finish"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="24dp"
		android:layout_marginBottom="24dp"
		android:background="@color/transparent"
		android:clickable="true"
		android:focusable="true"
		android:foreground="@drawable/ripple_small_corners"
		android:paddingStart="10dp"
		android:paddingTop="5dp"
		android:paddingEnd="10dp"
		android:paddingBottom="5dp"
		android:text="@string/finish"
		android:textColor="@color/teal_200"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>
	
	<TextView
		android:id="@+id/welcom2_button_previous"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginBottom="24dp"
		android:background="@color/transparent"
		android:clickable="true"
		android:focusable="true"
		android:foreground="@drawable/ripple_small_corners"
		android:paddingStart="10dp"
		android:paddingTop="5dp"
		android:paddingEnd="10dp"
		android:paddingBottom="5dp"
		android:text="@string/previous"
		android:textColor="@color/teal_200"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>