<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/bottomSheetDialog_root"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/layout_background_bottom_input_dialog">
	
	<androidx.appcompat.widget.AppCompatImageButton
		android:id="@+id/bottomSheetDialog_button_back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:background="@color/transparent"
		android:contentDescription="@string/app_name_space"
		android:foreground="@drawable/ripple_message_row_foreground"
		android:minWidth="48dp"
		android:minHeight="48dp"
		android:src="@drawable/ic_baseline_arrow_back_24"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	
	<androidx.appcompat.widget.AppCompatImageButton
		android:id="@+id/bottomSheetDialog_button_check"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:background="@color/transparent"
		android:contentDescription="@string/app_name_space"
		android:foreground="@drawable/ripple_message_row_foreground"
		android:minWidth="48dp"
		android:minHeight="48dp"
		android:src="@drawable/ic_baseline_check_24"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	
	<TextView
		android:id="@+id/bottomSheetDialog_text_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/add_new_tag"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="@+id/bottomSheetDialog_button_check"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/bottomSheetDialog_button_back"/>
	
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/bottomSheetDialog_input_tag"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="32dp"
		android:layout_marginBottom="24dp"
		app:counterEnabled="true"
		app:counterMaxLength="20"
		app:errorEnabled="true"
		app:errorTextColor="@color/red"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/bottomSheetDialog_text_title">
		
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/bottomSheetDialog_editText_tag"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/your_tag"
			android:maxLength="20"
			android:maxLines="1"/>
	</com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>